--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
-  "description": "Gatsby hello world starter",
+  "name": "hello-gamepad",
+  "description": "Video game news blog",
+  "author": "Nathan Heller",
+  "homepage": "https://gamepad.news",
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
@@ -9,7 +11,25 @@
   },
   "dependencies": {
     "gatsby": "next",
+    "gatsby-image": "^1.0.54",
+    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-typography": "next",
+    "gatsby-remark-copy-linked-files": "next",
+    "gatsby-remark-images": "next",
+    "gatsby-remark-responsive-iframe": "next",
+    "gatsby-remark-smartypants": "next",
+    "gatsby-source-filesystem": "next",
+    "gatsby-transformer-remark": "next",
+    "gatsby-transformer-sharp": "next",
+    "lodash": "^4.17.5",
+    "moment": "^2.22.2",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "react-helmet": "^5.2.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.7.0",
+    "prettier": "^1.12.0"
   }
 }
