--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "gatsby": "next",
     "gatsby-image": "^1.0.54",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-sass": "^1.0.26",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-typography": "next",
     "gatsby-remark-copy-linked-files": "next",
