--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -21,6 +21,6 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Date', name: 'date', widget: 'date' }
       - { label: 'Author', name: 'author', widget: 'string' }
-      - { label: 'Tags', name: 'tags', widget: 'list' }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Image file name', name: 'image', widget: 'string' }
