--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "moment": "^2.22.2",
     "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
