--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "gatsby-image": "^1.0.54",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sass": "^1.0.26",
+    "gatsby-plugin-sass": "next",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-typography": "next",
     "gatsby-remark-copy-linked-files": "next",
@@ -24,11 +24,11 @@
     "gatsby-remark-smartypants": "next",
     "gatsby-source-filesystem": "next",
     "gatsby-source-s3": "^0.0.0",
-    "gatsby-source-s3-image": "^0.0.4",
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
+    "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-burger-menu": "^2.5.2",
