--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "bulma": "^0.7.1",
+    "bootstrap": "^4.1.3",
     "gatsby": "next",
     "gatsby-image": "^1.0.54",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-typography": "next",
+    "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
     "gatsby-remark-responsive-iframe": "next",
@@ -26,11 +26,14 @@
     "gatsby-source-s3": "^0.0.0",
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
+    "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
