--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "antd": "^3.9.3",
     "gatsby": "next",
     "gatsby-image": "^1.0.54",
+    "gatsby-plugin-antd": "^2.0.2",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
@@ -33,7 +34,6 @@
     "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-bootstrap": "^1.0.0-beta.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
