--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "antd": "^3.9.3",
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "gatsby": "next",
     "gatsby-image": "^1.0.54",
-    "gatsby-plugin-antd": "^2.0.2",
     "gatsby-plugin-google-analytics": "next",
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
