--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "@material-ui/core": "^3.1.1",
-    "@material-ui/icons": "^3.0.1",
+    "bootstrap": "^4.1.3",
     "gatsby": "next",
     "gatsby-image": "^1.0.54",
     "gatsby-plugin-google-analytics": "next",
@@ -27,13 +26,12 @@
     "gatsby-source-s3": "^0.0.0",
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
-    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.2",
     "node-sass": "^4.9.3",
-    "popper.js": "^1.14.4",
     "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
