--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "bootstrap": "^4.1.3",
     "gatsby": "next",
     "gatsby-image": "^1.0.54",
     "gatsby-plugin-google-analytics": "next",
@@ -31,13 +30,13 @@
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-bootstrap": "^1.0.0-beta.1",
     "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
     "typography": "^0.16.17",
-    "typography-theme-alton": "^0.15.10"
+    "typography-theme-alton": "^0.15.10",
+    "typography-theme-parnassus": "^0.15.10"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
