--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,4 +23,5 @@ collections:
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-      - { label: 'Image file name', name: 'image', widget: 'string' }
+      - { label: 'Image file name', name: 's3Image', widget: 'string' }
+      - { label: 'Slug (do not change)', name: 'slugPartial', widget: 'string' }
