--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,17 +13,19 @@ display_url: https://gamepad.news
 
 collections:
   - name: 'blog'
-    label: 'Blog'
-    title: 'Blog'
+    label: 'Gamepad News'
+    title: 'Gamepad News'
     label_singular: 'Post'
     folder: 'src/pages/posts'
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}-x'
     create: true
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Subtitle', name: 'subtitle', widget: 'string', default: '', required: false }
       - { label: 'Date', name: 'date', widget: 'date' }
       - { label: 'Author', name: 'author', widget: 'string' }
-      - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-      - { label: 'Image file name', name: 's3Image', widget: 'string' }
+      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
+      - { label: 'Image file', name: 's3Image', widget: 'string' }
       - { label: 'Slug (do not change)', name: 'slugPartial', widget: 'string' }
