--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,12 +20,13 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     create: true
     fields:
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Subtitle', name: 'subtitle', widget: 'string', default: '', required: false }
-      - { label: 'Date', name: 'date', widget: 'date' }
+      - { label: 'Headline', name: 'headline', widget: 'string' }
+      - { label: 'Subtitle (optional)', name: 'subtitle', widget: 'string', default: '', required: false }
+      - { label: 'Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-      - { label: 'Description (150 chars max)', name: 'description', widget: 'string' }
+      - { label: 'Meta Title (60 chars max)', name: 'metaTitle', widget: 'string' }
+      - { label: 'Meta Description (150 chars max)', name: 'metaDescription', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
       - { label: 'Image file', name: 's3Image', widget: 'string' }
       - { label: 'Slug (do not change)', name: 'slugPartial', widget: 'string' }
