--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,9 +20,9 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     create: true
     fields:
-      - { label: 'Headline', name: 'headline', widget: 'string' }
+      - { label: 'Title', name: 'headline', widget: 'string' }
       - { label: 'Subtitle (optional)', name: 'subtitle', widget: 'string', default: '', required: false }
-      - { label: 'Date', name: 'date', widget: 'date' }
+      - { label: 'Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Meta Title (60 chars max)', name: 'metaTitle', widget: 'string' }
