change title again

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,7 +20,7 @@ collections:
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     create: true
     fields:
-      - { label: 'Title', name: 'headline', widget: 'string' }
+      - { label: 'Headline', name: 'title', widget: 'string' }
       - { label: 'Subtitle (optional)', name: 'subtitle', widget: 'string', default: '', required: false }
       - { label: 'Date', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string' }
