--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,8 +25,8 @@ collections:
       - { label: 'Date (do not change)', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-      - { label: 'Meta Title (60 chars max)', name: 'metaTitle', widget: 'string', pattern: ['^.{,60}$', '60 chars max'] }
-      - { label: 'Meta Description (150 chars max)', name: 'metaDescription', widget: 'string', pattern: ['^.{,150}$', '150 chars max'] }
+      - { label: 'Meta Title (60 chars max)', name: 'metaTitle', widget: 'string' }
+      - { label: 'Meta Description (150 chars max)', name: 'metaDescription', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
       - { label: 'Image file', name: 's3Image', widget: 'string' }
       - { label: 'Slug (do not change)', name: 'slugPartial', widget: 'string' }
