--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -5,17 +5,18 @@ backend:
   squash_merges: true
 
 publish_mode: editorial_workflow
-
-media_folder: 'static/img/uploads'
-public_folder: '/img/uploads'
-
 display_url: https://gamepad.news
 
+media_library:
+  name: uploadcare
+  config:
+    publicKey: dafe69442ae284f9a25b
+
 collections:
-  - name: 'blog'
-    label: 'Gamepad News'
-    title: 'Gamepad News'
+  - name: 'posts'
+    label: 'Posts'
     label_singular: 'Post'
+    description: 'Articles on Gamepad News'
     folder: 'src/pages/posts'
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     create: true
@@ -24,6 +25,16 @@ collections:
       - { label: 'Subtitle (optional)', name: 'subtitle', widget: 'string', default: '', required: false }
       - { label: 'Date (do not change)', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string' }
+      - { 
+          label: 'Image',
+          name: 'image',
+          widget: 'image',
+          required: false,
+          options:
+            media_library:
+              config:
+                publicKey: 'dafe69442ae284f9a25b'
+        }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Meta Title (60 chars max)', name: 'metaTitle', widget: 'string' }
       - { label: 'Meta Description (150 chars max)', name: 'metaDescription', widget: 'string' }
