rm s3 image plugin

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,19 +25,9 @@ collections:
       - { label: 'Subtitle (optional)', name: 'subtitle', widget: 'string', default: '', required: false }
       - { label: 'Date (do not change)', name: 'date', widget: 'datetime' }
       - { label: 'Author', name: 'author', widget: 'string' }
-      - { 
-          label: 'Image',
-          name: 'image',
-          widget: 'image',
-          required: true,
-          # options:
-          #   media_library:
-          #     config:
-          #       publicKey: 'dafe69442ae284f9a25b'
-        }
+      - { label: 'Image', name: 'image', widget: 'image' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
       - { label: 'Meta Title (60 chars max)', name: 'metaTitle', widget: 'string' }
       - { label: 'Meta Description (150 chars max)', name: 'metaDescription', widget: 'string' }
       - { label: 'Tags', name: 'tags', widget: 'list', default: [] }
-      - { label: 'Image file', name: 's3Image', widget: 'string' }
       - { label: 'Slug (do not change)', name: 'slugPartial', widget: 'string' }
