--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,7 +27,7 @@ collections:
       - { label: 'Author', name: 'author', widget: 'string' }
       - { label: 'Image', name: 'image', widget: 'image' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
-      - { label: 'Meta Title', name: 'metaTitle', widget: 'string', pattern: ['.^{1,60}$', '60 chars max'] }
-      - { label: 'Meta Description', name: 'metaDescription', widget: 'string', pattern: ['.^{1,150}$', '150 chars max'] }
+      - { label: 'Meta Title', name: 'metaTitle', widget: 'string', pattern: ['.^{30,60}$', '30-60 chars'], required: false }
+      - { label: 'Meta Description', name: 'metaDescription', widget: 'string', pattern: ['.^{75,150}$', '75-150 chars'], required: false }
       - { label: 'Tags', name: 'tags', widget: 'list' }
       - { label: 'Slug (do not change)', name: 'slugPartial', widget: 'string' }
