--- a/static/styles/fontello/config.json
+++ b/static/styles/fontello/config.json
@@ -25,12 +25,6 @@
       "src": "fontawesome"
     },
     {
-      "uid": "bf882b30900da12fca090d9796bc3030",
-      "css": "mail",
-      "code": 59393,
-      "src": "fontawesome"
-    },
-    {
       "uid": "d7271d490b71df4311e32cdacae8b331",
       "css": "home",
       "code": 59394,
@@ -53,6 +47,30 @@
       "css": "right-dir",
       "code": 59392,
       "src": "fontawesome"
+    },
+    {
+      "uid": "559647a6f430b3aeadbecd67194451dd",
+      "css": "menu",
+      "code": 61641,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "5211af474d3a9848f67f945e2ccaf143",
+      "css": "cancel",
+      "code": 59396,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "bf882b30900da12fca090d9796bc3030",
+      "css": "mail",
+      "code": 59393,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "06301c50d89b5d3e651bd07ebd6d7de7",
+      "css": "cancel-1",
+      "code": 59397,
+      "src": "mfglabs"
     }
   ]
 }
