--- a/static/styles/fontello/config.json
+++ b/static/styles/fontello/config.json
@@ -71,6 +71,12 @@
       "css": "cancel-1",
       "code": 59397,
       "src": "mfglabs"
+    },
+    {
+      "uid": "ccc2329632396dc096bb638d4b46fb98",
+      "css": "mail-alt",
+      "code": 61664,
+      "src": "fontawesome"
     }
   ]
 }
