--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "next",
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-sharp": "next",
+    "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
