--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "next",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "next",
     "gatsby-remark-responsive-iframe": "next",
     "gatsby-remark-smartypants": "next",
