--- a/static/styles/fontello/config.json
+++ b/static/styles/fontello/config.json
@@ -73,9 +73,15 @@
       "src": "mfglabs"
     },
     {
-      "uid": "ccc2329632396dc096bb638d4b46fb98",
-      "css": "mail-alt",
-      "code": 61664,
+      "uid": "8663320a860b00f26e94d3d15c9ba99a",
+      "css": "clock",
+      "code": 59398,
+      "src": "entypo"
+    },
+    {
+      "uid": "598a5f2bcf3521d1615de8e1881ccd17",
+      "css": "clock-1",
+      "code": 59399,
       "src": "fontawesome"
     }
   ]
