change package json title

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hello-gamepad",
+  "name": "gamepad-news",
   "description": "Video game news blog",
   "author": "Nathan Heller",
   "homepage": "https://gamepad.news",
