--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "gatsby-plugin-sass": "next",
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "^2.0.2",
-    "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "next",
@@ -34,8 +33,7 @@
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
-    "typography": "^0.16.17",
-    "typography-theme-parnassus": "^0.15.10"
+    "typography": "^0.16.17"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
